@@ -77,10 +77,18 @@ RandomValuesDialog::RandomValuesDialog(Spreadsheet* s, QWidget* parent)
 	ui.leParameter1->setClearButtonEnabled(true);
 	ui.leParameter2->setClearButtonEnabled(true);
 	ui.leParameter3->setClearButtonEnabled(true);
+	ui.leSeed->setClearButtonEnabled(true);
 
 	ui.leParameter1->setValidator(new QDoubleValidator(ui.leParameter1));
 	ui.leParameter2->setValidator(new QDoubleValidator(ui.leParameter2));
 	ui.leParameter3->setValidator(new QDoubleValidator(ui.leParameter3));
+	ui.leSeed->setValidator(new QIntValidator(ui.leSeed));
+
+	QString info = i18n("Seed number to initialize the random number generator.\n"
+"If the generator is seeded with the same value, the same stream of random numbers will be generated by successive calls.\n"
+"If no value is specified, the current timestamp will be used to seed the generator.");
+	ui.lSeed->setToolTip(info);
+	ui.leSeed->setToolTip(info);
 
 	connect(ui.cbDistribution, QOverload<int>::of(&QComboBox::currentIndexChanged), this, &RandomValuesDialog::distributionChanged);
 	connect(ui.leParameter1, &QLineEdit::textChanged, this, &RandomValuesDialog::checkValues);
@@ -101,6 +109,7 @@ RandomValuesDialog::RandomValuesDialog(Spreadsheet* s, QWidget* parent)
 		ui.leParameter1->setText(numberLocale.toString(conf.readEntry("Parameter1", 0.0)));
 		ui.leParameter2->setText(numberLocale.toString(conf.readEntry("Parameter2", 1.0)));
 		ui.leParameter3->setText(numberLocale.toString(conf.readEntry("Parameter3", 1.0)));
+		ui.leSeed->setText(conf.readEntry("Seed", QString()));
 
 		KWindowConfig::restoreWindowSize(windowHandle(), conf);
 		resize(windowHandle()->size()); // workaround for QTBUG-40584
@@ -120,6 +129,7 @@ RandomValuesDialog::~RandomValuesDialog() {
 	conf.writeEntry("Parameter1", numberLocale.toDouble(ui.leParameter1->text()));
 	conf.writeEntry("Parameter2", numberLocale.toDouble(ui.leParameter2->text()));
 	conf.writeEntry("Parameter3", numberLocale.toDouble(ui.leParameter3->text()));
+	conf.writeEntry("Seed", ui.leSeed->text());
 
 	KWindowConfig::saveWindowSize(windowHandle(), conf);
 }
@@ -394,7 +404,17 @@ void RandomValuesDialog::generate() {
 	gsl_rng_env_setup();
 	const gsl_rng_type* T = gsl_rng_default;
 	gsl_rng* r = gsl_rng_alloc(T);
-	gsl_rng_set(r, QDateTime::currentMSecsSinceEpoch());
+
+	ulong seed;
+	if (!ui.leSeed->text().isEmpty()) {
+		bool ok;
+		seed = ui.leSeed->text().toULong(&ok);
+		if (!ok)
+			seed = QDateTime::currentMSecsSinceEpoch();
+	} else
+		seed = QDateTime::currentMSecsSinceEpoch();
+
+	gsl_rng_set(r, seed);
 
 	WAIT_CURSOR;
 	for (auto* col : m_columns)
